--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <p style="font-size: 100px;text-align: center;background-color: brown;">DOOM SLAYER</p>
 </head>
   <body>
-    <p  style="text-align: center"><img src="doom.jpg" widht="60px"></p> 
-    <p style="font-size: 70px;text-align: center;background-color: brown">в даном блоге вы получите советы по закрытию дума 2016 на абсолютном кошмаре.</p>
-    <p style="font-size: 40px;text-align: center;background-color: brown">Что такое цена ошибки и причем тут DOOM?</br>Цена ошибки это значимость оплошности совершаемой тобой.</br> возмём в пример сложность кошмар на которой демоны по тебе вносят столько же урона как и на абсолютном кошмаре,но тот факт что ты имеешь возможность после смерти очучиться в пяти секундах от арены на которой ты и умер сводит её к минимуму.</br>Hо на сложности абсолютный кошмар цена ошибки достигает критическово значения заставляя тебя перепроходить всю игру при смерти с самово начала.</br>Игра на Абсолютный кошмар кидает тебя в стену после спокойного и размереного первово прохождения,заставляя тебе научиться в неё играть, заставряя придумывать стратегию и тактику прохождения, заставляя пользоваться игровыми механиками которыми ты раньше не пользовался, заставляя играть тебя в DOOM.</p>
+    <p class="kirtinka"><img src="doom.jpg" widht="60px"></p> 
+    <h1>в даном блоге вы получите советы по закрытию дума 2016 на абсолютном кошмаре.</h1>
+    <p>Что такое цена ошибки и причем тут DOOM?</br>Цена ошибки это значимость оплошности совершаемой тобой.</br> возмём в пример сложность кошмар на которой демоны по тебе вносят столько же урона как и на абсолютном кошмаре,но тот факт что ты имеешь возможность после смерти очучиться в пяти секундах от арены на которой ты и умер сводит её к минимуму.</br>Hо на сложности абсолютный кошмар цена ошибки достигает критическово значения заставляя тебя перепроходить всю игру при смерти с самово начала.</br>Игра на Абсолютный кошмар кидает тебя в стену после спокойного и размереного первово прохождения,заставляя тебе научиться в неё играть, заставряя придумывать стратегию и тактику прохождения, заставляя пользоваться игровыми механиками которыми ты раньше не пользовался, заставляя играть тебя в DOOM.</p>
     <img src="upgrade.png" width="1570px">
-    <p style="font-size: 40px;text-align: center;background-color: brown">ОЧКИ УЛУЧШЕНИЯ ОРУЖИЯ </br>это одна из важнейших состовляющих вашего забега</br> с помощью которой вы сможете прокачивать оружия,</br> и выполнять испытания мастера при полной прокачки оружия о которых позже.</p>
+    <p>ОЧКИ УЛУЧШЕНИЯ ОРУЖИЯ </br>это одна из важнейших состовляющих вашего забега</br> с помощью которой вы сможете прокачивать оружия,</br> и выполнять испытания мастера при полной прокачки оружия о которых позже.</p>
     <img src="straj.webp" width="1570px">
-    <p style="font-size: 40px;text-align: center;background-color: brown">
+    <p>
     ЖЕТОНЫ ПРЕТОРИАНЦА</br> 
     собираем все, но вопрос что качать первым был у меня на протяжении всех забегов.</br>
     1.качаем всю ветку ЗАЩИТЫ ОТ ОКРУЖАЮЩЕЙ СРЕДЫ.</br>
@@ -21,15 +21,17 @@
     3.качаем всю ветку УСИЛЕНИЙ.</br>
     4.качаем ветку с предметами снаряжения до максимума.</br>
     5.качаем скорости взбирания на уступы все остальные навыки бесполезные.</br></p>
-    <p style="text-align: center"><img src="drone.webp"></p>
-    <p style="font-size: 40px;text-align: center;background-color: brown">ДРОНЫ</br>спрятаны по уровням в количестве от 1 до 2 штук</br>их местонахождение нужно заучит как и в случая с любым другим колекционым предметом который сможет помочь вам в забеге</br>хотя в ситуации сдронами нужнособрать всего 6 дронов</br>по 1 на каждую пушку</br>на пушку можно ставить 1 обвес из 2 предложеных</br>я рекомендую ставить модификации из 2 ветке ниже объясню подробнее</p>
-    <p style="text-align: center"><img src="drobabik.jpg">
-    </p>
-    <p style="font-size: 40px;text-align: center;background-color: brown">ДРОБАВИК Ваше самое первое оружие</br>
+    <p class="kirtinka"><img src="drone.webp"></p>
+    <p>ДРОНЫ</br>спрятаны по уровням в количестве от 1 до 2 штук</br>их местонахождение нужно заучит как и в случая с любым другим колекционым предметом который сможет помочь вам в забеге</br>хотя в ситуации сдронами нужнособрать всего 6 дронов</br>по 1 на каждую пушку</br>на пушку можно ставить 1 обвес из 2 предложеных</br>я рекомендую ставить модификации из 2 ветке ниже объясню подробнее</p>
+    <p class="kirtinka"><img src="drobabik.jpg"></p>
+    <p>ДРОБАВИК Ваше самое первое оружие</br>
     на ближайшие два уровня главное оружие для убийства демонов</br>
     берите на нево модуль микроракеты из-за мобильности,урона по области,</br> и траты всего 1 патрона,а не 3 как модуль шквальный огонь.</br>
     Советую не тратить на него очки улучшения оружия</br> так как на 3 уровне мы вкачнём винтовку и дробавик станет менее востребованным,</br> а на 4 уровнемы мы получаем супердробавик после чего вы забудите про обычный дробавик</p>
-    <p style="text-align: center"><img src="plasmogun.jpeg"></p>
+    <p class="kirtinka"><img src="plasmogun.jpeg"></p>
   </body>
 </html>
+
+
+
 
