--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <h1>в даном блоге вы получите советы по закрытию дума 2016 на абсолютном кошмаре.</h1>
     <p>Что такое цена ошибки и причем тут DOOM?</br>Цена ошибки это значимость оплошности совершаемой тобой.</br> возмём в пример сложность кошмар на которой демоны по тебе вносят столько же урона как и на абсолютном кошмаре,но тот факт что ты имеешь возможность после смерти очучиться в пяти секундах от арены на которой ты и умер сводит её к минимуму.</br>Hо на сложности абсолютный кошмар цена ошибки достигает критическово значения заставляя тебя перепроходить всю игру при смерти с самово начала.</br>Игра на Абсолютный кошмар кидает тебя в стену после спокойного и размереного первово прохождения,заставляя тебе научиться в неё играть, заставряя придумывать стратегию и тактику прохождения, заставляя пользоваться игровыми механиками которыми ты раньше не пользовался, заставляя играть тебя в DOOM.</p>
     <img src="upgrade.png" width="1570px">
-    <p>ОЧКИ УЛУЧШЕНИЯ ОРУЖИЯ </br>это одна из важнейших состовляющих вашего забега</br> с помощью которой вы сможете прокачивать оружия,</br> и выполнять испытания мастера при полной прокачки оружия о которых позже.</p>
-    <img src="straj.webp" width="1570px">
-    <p>
+    <p><img src="upgrade.png" width="1570px">ОЧКИ УЛУЧШЕНИЯ ОРУЖИЯ </br>это одна из важнейших состовляющих вашего забега</br> с помощью которой вы сможете прокачивать оружия,</br> и выполнять испытания мастера при полной прокачки оружия о которых позже.</p>
+    <p><img src="straj.webp" width="1570px">
     ЖЕТОНЫ ПРЕТОРИАНЦА</br> 
     собираем все, но вопрос что качать первым был у меня на протяжении всех забегов.</br>
     1.качаем всю ветку ЗАЩИТЫ ОТ ОКРУЖАЮЩЕЙ СРЕДЫ.</br>
@@ -31,6 +30,7 @@
     <p class="kirtinka"><img src="plasmogun.jpeg"></p>
   </body>
 </html>
+
 
 
 
